update documentation, variables whitespace, readme, fix incorrect naming

--- a/assets/stylesheets/vital/_helpers.sass
+++ b/assets/stylesheets/vital/_helpers.sass
@@ -184,9 +184,3 @@ ol.list li
 
   .responsive
     width: 100%
-
-@media screen and (max-width: $handheld-landscape)
-
-  .responsive-landscape
-    width: 100%
-
