--- a/assets/stylesheets/vital/_variables.sass
+++ b/assets/stylesheets/vital/_variables.sass
@@ -91,10 +91,10 @@ $grid-padding:                 2% !default
 
 // Loaders
 
-$loader-large: 48px !default
-$loader: 32px !default
-$loader-small: 16px !default
-$loader-smallest: 9px !default
+$loader-large:                 48px !default
+$loader:                       32px !default
+$loader-small:                 16px !default
+$loader-smallest:              9px !default
 
 // Forms
 
@@ -114,7 +114,7 @@ $tablet:                       1080px !default
 $phablet:                      860px !default
 $phablet-handheld:             780px !default
 $handheld:                     667px !default
-$handheld-landscape:           334px !default
+$handheld-portrait:            334px !default
 
 // Characters
 
